--- a/assets/styles/scss/variables.scss
+++ b/assets/styles/scss/variables.scss
@@ -7,9 +7,9 @@ $margin-top:size(25);
 $margin-left:size(25);
 $margin-bottom:size(25);
 $margin-bottom__btn:size(10);
-$margin-right:25px;
-$margin:25px;
-$padding:18px;
+$margin-right:size(25);
+$margin:size(25);
+$padding:size(25);
 
 $slider__margin-top:35px;
 $slider__margin-bottom:38px;
