--- a/assets/styles/globals.scss
+++ b/assets/styles/globals.scss
@@ -1,17 +1,48 @@
-@import './scss/variables'
-* {
+ @import './scss/_variables';
+ @import '../../components/button/button';
+ @import '../../components/Navbar/navbar';
+ @import '../../components/header/header';
+ @import './Home';
+ 
+ 
+
+ @font-face {
+    font-family: "Segoe UI";
+    src: url("../fonts/Segoe UI.ttf");
+    font-style: normal;
+    font-weight: 500;
+    font-display: swap;
+  }
+  @font-face {
+    font-family: "Segoe UI";
+    src: url("../fonts/Segoe UI Bold.ttf");
+    font-style: bold;
+    font-weight: 800;
+    font-display: swap;
+  }
+   @font-face {
+    font-family: "Segoe UI";
+    src: url("../fonts/seguibl.ttf");
+    font-style: bold;
+    font-weight: 800;
+    font-display: swap;
+  }
+  @font-face {
+    font-family: "Segoe UI";
+    src: url("../fonts/seguisb.ttf");
+    font-style: bold;
+    font-weight: 800;
+    font-display: swap;
+  }
+
+  #__next{
+  margin:0;
+  padding:0;
   box-sizing: border-box;
-  padding: 0;
-  margin: 0;
-
-}
-
-a {
-  text-decoration: none;
-}
-
-
-.container-fluid{
+  font-family: $font-family;
+  
+ }
+ .container-fluid{
   margin-left:$fluid-size;
   margin-right:$fluid-size;
   }
