--- a/assets/styles/scss/_variables.scss
+++ b/assets/styles/scss/_variables.scss
@@ -3,13 +3,11 @@ $base-size:16;
     @return($target/$base-size)+rem
 }
 /*Spacing*/
-$margin-top:size(25);
-$margin-left:size(25);
-$margin-bottom:size(25);
+
+$fluid-size:165px;
+$margin-size:size(25);
 $margin-bottom__btn:size(10);
-$margin-right:size(25);
-$margin:size(25);
-$padding:size(18);
+
 
 $slider__margin-top:35px;
 $slider__margin-bottom:38px;
@@ -32,6 +30,7 @@ $width__user-mob:35px;
 $height__user-mob:35px;
 
 /*font*/
+$font-family: Segoe UI,Frutiger,Frutiger Linotype,Dejavu Sans,Helvetica Neue,Arial,sans-serif;   
 $font-size:size(16);
 $font-size__cn:size(15);
 $font-size__ex:size(9);
@@ -59,6 +58,7 @@ $color__label:#464646;
 $color__white:#ffffff;
 $color__err:#ea0000;
 $color__success:#7DBB00;
+$color__bg:#f9f9f9;
 
 
 
