added post-info and post,news item component

--- a/public/assets/styles/scss/variables.scss
+++ b/public/assets/styles/scss/variables.scss
@@ -1,3 +1,4 @@
+
 $base-size:16;
 @function size($target){
     @return($target/$base-size)+rem
@@ -10,7 +11,18 @@ $margin-bottom:size(25);
 $margin-bottom__btn:size(10);
 $margin-right:size(25);
 $margin:size(25);
-$padding:size(25);
+
+$margin_lg:size(50);
+$margin_md:size(25);
+$margin_sm:size(22);
+$margin_xs:size(10);
+
+$padding_lg:size(50);
+$padding_md:size(25);
+$padding_sm:size(22);
+$padding_xs:size(10);
+
+
 
 $slider__margin-top:35px;
 $slider__margin-bottom:38px;
@@ -22,6 +34,7 @@ $card-sm__border-radius:0 30px 30px 30px;
 $card-xs__border-radius:0 20px 20px 20px;
 $flag-only__border-radius:0 7px 7px 7px;
 $card-lg__border-radius:10px;
+$border_radius_lg:30px;
 
 /*logo and menu*/
 $width__logo:149px;
@@ -46,8 +59,26 @@ $font-size__faq-title:size(33);
 $font-size__lg:size(36);
 $font-size-title__md:size(28);
 
+// font sizes list
+
+$font_sizes: (
+    '1': #{$font-size},
+    '2': #{$font-size__cn},
+    '3': #{$font-size $font-size__ex},
+    '4': #{$font-size__faq-title},
+    '5': #{$font-size__lg},
+    '6': #{$font-size__sm},
+    '7': #{$font-size__strong},
+    '8': #{$font-size__subtitle},
+    '9': #{$font-size__xs},
+    '10': #{$font-size__xs_1},
+    '11': #{$font-size-title__md},
+    '12': #{$font-size__balance},
+);
+
 $font-weight__menu:400;
 $font-weight__reg:500;
+$font-weight:700;
 
 /*color*/
 $color__menu:#707070;
@@ -60,6 +91,17 @@ $color__label:#464646;
 $color__white:#ffffff;
 $color__err:#ea0000;
 $color__success:#7DBB00;
+
+$colors:('menu':#707070,
+'yellow':#ffc528,
+'bg':#f6f6f6,
+'icon':#292929,
+'black':#000000,
+'subtitle':#78747474,
+'label':#464646,
+'white':#ffffff,
+'err':#ea0000,
+'success':#7DBB00,)
 
 
 
