--- a/components/footer/Footer.scss
+++ b/components/footer/Footer.scss
@@ -82,6 +82,15 @@
     }
 
    }
+
+ .footer-bottom{
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   background-color: $color__icon;
+   color: white;
+   height: 50px;
+ }
 }
 .link_ul_item{
 
