--- a/components/input/input.scss
+++ b/components/input/input.scss
@@ -6,4 +6,7 @@
  outline: none;
  border-style: none;
  background-color: transparent;
+//  &:-webkit-autofill{
+//  content-visibility: hidden;
+//  }
 }
