--- a/components/main-slider/main-slider.scss
+++ b/components/main-slider/main-slider.scss
@@ -5,16 +5,17 @@ overflow: hidden;
 
  .swiper-wrapper{
   display: flex;
+height: 100%;
+
   justify-content: center;
-  height: 500px;
-  position: relative;
+//   position: relative;
 
   // overflow: hidden;
 
   .swiper-slide{
-  height: 500px;
   width: 100%;
-  position: absolute;
+  height: 100%;
+//   position: absolute;
   top: 0;
   bottom: 0;
   right: 0;
@@ -23,7 +24,10 @@ overflow: hidden;
   justify-content: center;
   align-items: center;
   margin: auto;
+   img{
+  height: 100%;
 
+   }
   }
  }
 }
