--- a/public/assets/styles/Home.scss
+++ b/public/assets/styles/Home.scss
@@ -1,4 +1,5 @@
 @import './scss/variables';
+
 .title{
     font-family:$font-family;
     font-weight:600;
@@ -64,22 +65,42 @@
   }
 }
 
-.page{
-  .tariff-section{
-    width: 1006px;
-   display: flex;
-  //  justify-content: space-between;
-   align-items: center;
+.home-page{
+  .main-section{
+    display: flex;
+    align-items: center;
+    justify-content: center;
 
-   .card{
-     .card-body{
-       div{
-         .rate{
-          //  width: 33%;
-           margin-right: $margin_sm;
+    .container-fluid{
+      display: flex;
+      justify-content: space-between;
+      .slider-container{
+        width: 66%;
+        height: auto;
+      }
+      .login-card{
+        width: 33%;
+      }
+    }
+  }
+  .page{
+
+    .tariff-section{
+      width: 1006px;
+     display: flex;
+    //  justify-content: space-between;
+     align-items: center;
+  
+     .card{
+       .card-body{
+         div{
+           .rate{
+            //  width: 33%;
+             margin-right: $margin_sm;
+           }
          }
        }
      }
    }
- }
+  }
 }
