--- a/public/assets/styles/globals.scss
+++ b/public/assets/styles/globals.scss
@@ -17,12 +17,22 @@
 @import '../../../components/radio-button/radio-button.scss';
 @import '../../../components/main-slider/main-slider.scss';
 @import '../../../components/input/input.scss';
+@import '../../../components/summary/summary.scss';
+@import '../../../components/checkbox/checkbox.scss';
+
+
 
 
 @import './blog.scss';
 @import './about.scss';
 @import './post-info.scss';
+@import './user-info.scss';
+@import './register';
 @import './Home';
+@import './contact.scss';
+@import './faq.scss';
+
+
 
 
 
