--- a/public/assets/styles/globals.scss
+++ b/public/assets/styles/globals.scss
@@ -14,7 +14,8 @@
 @import '../../../components/button/button';
 @import '../../../components/Navbar/navbar';
 @import '../../../components/main-slider/main-slider.scss';
-
+@import '../../../components/address-item/address-item.scss';
+@import '../../../components/aside-menu/aside-menu.scss';
 @import './Home';
 
 
