--- a/components/Navbar/navbar.scss
+++ b/components/Navbar/navbar.scss
@@ -1,7 +1,7 @@
 @import '../../public/assets/styles/scss/variables.scss';
 
 .header{
-  margin-bottom: $margin_lg;
+//   margin-bottom: $margin_lg;
 .bg{
     width:100%;
     background:$color__bg;
@@ -68,7 +68,7 @@
         .navbar__item{
             list-style-type: none;
             &:not(:nth-child(1)){
-                margin-left:$margin_md;
+                margin-left:20px;
             }
            
             &:nth-child(2){
