--- a/components/summary/summary.scss
+++ b/components/summary/summary.scss
@@ -1,15 +1,25 @@
 @import '../../public/assets/styles/scss/variables';
 
 .faq-item{
-    transition: all 0.5s ease;
+    transition: all 1s ease;
     border: 1px solid $color__bg;
     border-radius: $border-radius_sm;
     padding: $padding_sm;
     margin-bottom: $margin-bottom;
+    height: 67px;
+    &[open] .faq-info{
+      // height: 100%;
+      border-top: 0px;
+    } 
+    &[open]{
+      border-bottom: 0px;
+    } 
     &[open] summary::after {
       transition: all 0.1s ease;
-        transform: rotate(180deg);
-    } 
+      transform: rotate(180deg);
+    }
+
+
     .faq-title{
       outline-style: none;
        position: relative;
@@ -36,9 +46,22 @@
       }
 
     }
-    .faq-info{
-      transition: all 0.5s ease;
-      margin-top: $margin-top;
-      color: $color__menu;
+
+      .faq-info{
+        transition: all 1s ease;
+        margin-top: $margin-top;
+        color: $color__menu;
+        border: 1px solid $color__bg;
+        padding: $padding_sm;
+        margin:#{$padding_sm} -#{$padding_sm};
+        background-color: white !important;
+        position: relative;
+        z-index: 1;
+
     }
 }
+
+// @keyframes sweep {
+//   0%   {height: 67px;}
+//   100% {height: 100%;}
+// }
