--- a/public/assets/styles/globals.scss
+++ b/public/assets/styles/globals.scss
@@ -21,6 +21,14 @@
 @import '../../../components/input/input.scss';
 @import '../../../components/summary/summary.scss';
 @import '../../../components/checkbox/checkbox.scss';
+@import '../../../components/aside/aside.scss';
+@import '../../../components/main/main.scss';
+@import '../../../components/tabel/tabel.scss';
+@import '../../../components/package_item/package-item.scss';
+
+
+
+
 
 @import './blog.scss';
 @import './about.scss';
@@ -30,6 +38,7 @@
 @import './Home';
 @import './contact.scss';
 @import './faq.scss';
+@import './orders.scss';
 
 
 
@@ -90,8 +99,16 @@ a{
 .container-fluid{
   max-width: 1006px;
   width: 100%;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
   // box-sizing: border-box;
 }
+
+// .cf-flex{
+//   display: flex;
+//   flex-wrap: wrap;
+// }
 
 .fluid_bottom{
   margin-bottom: calc(#{$fluid-size} / 2);
