--- a/public/assets/styles/scss/sizing.scss
+++ b/public/assets/styles/scss/sizing.scss
@@ -104,6 +104,9 @@ border-radius: $card-xs__border-radius !important;
 .w-100{
  width: 100% !important;
 }
+.w-initial{
+    width: initial !important;
+}
 
 
 .h-25{
@@ -117,4 +120,7 @@ height: 75% !important;
 }
 .h-100{ 
 height: 100% !important;
+}
+.h-initial{
+    height: initial !important;
 }
