--- a/public/assets/styles/globals.scss
+++ b/public/assets/styles/globals.scss
@@ -21,6 +21,8 @@
 @import '../../../components/input/input.scss';
 @import '../../../components/summary/summary.scss';
 @import '../../../components/checkbox/checkbox.scss';
+@import '../../../components/balance/balance.scss';
+
 
 @import './blog.scss';
 @import './about.scss';
