--- a/components/button/_button.scss
+++ b/components/button/_button.scss
@@ -8,7 +8,7 @@ border-radius: $btn__border-radius;
 outline:none;
 border:none;
 font-weight:400;
-width:max-content;
+width:100%;
 height:36px;
 display:flex;
 justify-content: center;
