--- a/public/assets/styles/globals.scss
+++ b/public/assets/styles/globals.scss
@@ -105,6 +105,10 @@ a{
   // box-sizing: border-box;
 }
 
+.p-r{
+ position: relative;
+}
+
 // .cf-flex{
 //   display: flex;
 //   flex-wrap: wrap;
