--- a/components/news_item/news-item.scss
+++ b/components/news_item/news-item.scss
@@ -9,6 +9,7 @@
   justify-content:space-between;
   align-items: center;
   margin-right: $margin_sm;
+  cursor: pointer;
   img{
    height: 173px;
    width: 173px;
