--- a/public/assets/styles/Home.scss
+++ b/public/assets/styles/Home.scss
@@ -92,9 +92,13 @@
      align-items: center;
   
      .card{
+      height: 100%;
        .card-body{
-         div{
+        height: 240px;
+        .rate-container{
+        height: 100%;
            .rate{
+            max-height: 100%;
             //  width: 33%;
              margin-right: $margin_sm;
            }
