--- a/public/assets/styles/globals.scss
+++ b/public/assets/styles/globals.scss
@@ -99,7 +99,7 @@ a{
   text-decoration: none;
   color: $color__menu;
 }
-@media screen and(max-width:1500px) and (min-width:1200px){
+@media screen  and (min-width:1200px){
 .container-fluid{
   max-width: 1006px;
   width: 100%;
