--- a/components/rate/rate.scss
+++ b/components/rate/rate.scss
@@ -8,7 +8,7 @@
    display: flex;
    align-items: center;
    margin-bottom: $margin_xs;
-   .img{
+   img{
     margin-right: $margin-right;
    }
    text{
