--- a/components/summary/summary.scss
+++ b/components/summary/summary.scss
@@ -1,3 +1,4 @@
+  
 @import '../../public/assets/styles/scss/variables';
 
 .faq-item{
@@ -7,14 +8,8 @@
     padding: $padding_xs;
     text-align:left;
     margin-bottom: $margin-bottom;
-    height: 67px;
-    &[open] .faq-info{
-      // height: 100%;
-      border-top: 0px;
-    } 
-    &[open]{
-      border-bottom: 0px;
-    } 
+    box-shadow: 0px 0px 5px $color__subtitle;
+
     &[open] summary::after {
       transition: all 0.1s ease;
       transform: rotate(180deg);
@@ -35,7 +30,7 @@
       }
       &::after{
         content: '\005E';
-      transition: all 0.1s ease;
+        transition: all 0.1s ease;
         display: flex;
         justify-content: center;
         align-items: center;
@@ -50,15 +45,8 @@
 
       .faq-info{
         transition: all 1s ease;
-        margin-top: $margin-top;
-        color: $color__menu;
-        border: 1px solid $color__bg;
-        padding: $padding_sm;
-        margin:#{$padding_sm} -#{$padding_sm};
+        margin-top: $margin_md;
         background-color: white !important;
-        position: relative;
-        z-index: 1;
-
     }
 }
 
