--- a/public/assets/styles/globals.scss
+++ b/public/assets/styles/globals.scss
@@ -172,3 +172,9 @@ a{
 .fluid_bottom{
   margin-bottom: calc(#{$fluid-size} / 2);
 }
+.pack-active{
+  // border: 1px solid transparent !important;
+  border-bottom-left-radius: 0px !important;
+  border-bottom-right-radius: 0px !important;
+  border-bottom: 2px solid $color__success !important;
+}
