--- a/components/main-slider/main-slider.scss
+++ b/components/main-slider/main-slider.scss
@@ -5,28 +5,13 @@ overflow: hidden;
 
  .swiper-wrapper{
   display: flex;
-height: 100%;
-
-  justify-content: center;
-//   position: relative;
-
-  // overflow: hidden;
-
+  height: 100%;
   .swiper-slide{
   width: 100%;
   height: 100%;
-//   position: absolute;
-  top: 0;
-  bottom: 0;
-  right: 0;
-  left: 0;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin: auto;
    img{
   height: 100%;
-
+   width: inherit;
    }
   }
  }
