--- a/public/assets/styles/decleration.scss
+++ b/public/assets/styles/decleration.scss
@@ -12,3 +12,14 @@
            }
     }
 }
+.declaration__flex{
+    display: flex;
+    flex-wrap: wrap;
+}
+@media(max-width:990px){
+    .declaration__flex{
+        .w-50{
+            width:100% !important
+        }
+    }
+}
