--- a/components/balance/balance.scss
+++ b/components/balance/balance.scss
@@ -6,6 +6,7 @@
     display:flex;
     justify-content:space-between;
     width:100%;
+    flex-wrap:wrap;
   
 
     .card{
@@ -32,4 +33,10 @@
         height:48px;
         width:100%
     }
+}
+
+@media(max-width:990px){
+    .mg-rr{
+        margin:0 !important
+        }
 }
