--- a/components/main/main.scss
+++ b/components/main/main.scss
@@ -6,3 +6,10 @@
     border-radius: $border-radius_sm;
     height: max-content;
 }
+
+@media(max-width:990px){
+    .main{
+        flex-basis:100%  !important;
+        width:100%;
+    }
+}
