--- a/public/assets/styles/faq.scss
+++ b/public/assets/styles/faq.scss
@@ -8,7 +8,7 @@
         .faq-head-img{
             margin-right: $margin_md;
         }
-        .faq-head-title{}
+       
     }
     .faq-body{
         display: flex;
@@ -17,6 +17,16 @@
 
         .faq-item{
             width: 45%;
+        }
+    }
+}
+@media(max-width:990px){
+    .faq-head-img{
+        width:130px !important;
+    }
+    .faq-body{
+        .faq-item{
+            width: 100% !important;
         }
     }
 }
