--- a/components/Navbar/navbar.scss
+++ b/components/Navbar/navbar.scss
@@ -199,13 +199,39 @@
         .user__menu{
             display:flex;
             flex-direction:column;
+            position: relative;
+
+            &:hover .log-register{
+                display: block !important;
+            }
+            .log-register{
+                display: none;
+               list-style-type: none;
+               position: absolute;
+               top: 50px;
+               right: 0px;
+               z-index: 1;
+               width: max-content;
+               background-color: $color__white;
+               li{
+                   display: flex;
+                   justify-content: center;
+                   align-items: center;
+                   padding: $padding_xs;
+                   background-color: $color__white;
+                   border: 1px solid $color__white;
+                   border-radius: $border-radius_sm;
+                    color: $color__black;
+               }
+            }
            
             .profile-dropdown{
                 display:none;
-                top: 7%;
+                top: 40px;
                 background: white;
                 right: 0%;
                 position: absolute;
+                z-index: 1;
             }
             &:hover .profile-dropdown{
                 display: block !important;
