--- a/components/summary/summary.scss
+++ b/components/summary/summary.scss
@@ -1,6 +1,8 @@
   
 @import '../../public/assets/styles/scss/variables';
 
+.faq-item-contain{
+  width:45%;
 .faq-item{
     transition: all 1s ease;
     border: 1px solid $color__bg;
@@ -9,7 +11,6 @@
     text-align:left;
     margin-bottom: $margin-bottom;
     box-shadow: 0px 0px 5px $color__subtitle;
-
     &[open] summary::after {
       transition: all 0.1s ease;
       transform: rotate(180deg);
@@ -48,6 +49,13 @@
         margin-top: $margin_md;
         background-color: white !important;
     }
+}
+}
+
+@media(max-width:660px) {
+  .faq-item-contain{
+    width: 100% !important;
+  }
 }
 
 // @keyframes sweep {
