--- a/public/assets/styles/Home.scss
+++ b/public/assets/styles/Home.scss
@@ -107,7 +107,9 @@
        .card-body{
         height: 240px;
         .rate-container{
-        height: 100%;
+          height: 100%;
+          display: flex;
+          justify-content:space-between;
            .rate{
             max-height: 100%;
             //  width: 33%;
@@ -135,6 +137,16 @@
   }
   .for-mobile-t{
     display: block !important;
+  }
+
+  .card-body{
+    height: auto !important;
+    .rate-container{
+      flex-direction: column;
+      .rate{
+        margin-bottom: 10px;
+      }
+   }
   }
 }
 @media(max-width:990px){
