--- a/public/assets/styles/faq.scss
+++ b/public/assets/styles/faq.scss
@@ -22,6 +22,7 @@
         width:130px !important;
     }
     .faq-body{
+        flex-direction: column !important;
         .faq-item{
             width: 100% !important;
         }
